# code

Analytical_Approach/: CMakeLists.txt  callcross6.m  callcross6_finaltrain.m  callcross_CV.m  crossentropyloss.m  feedforward.m  mainfunction4_finaltrain.m  mainfunction4_gradientclip.m  matlabTesting.sh  readtesterror.m  regularizer.m  sigmoidderivative.m  totalloss.m  validationtess_error.m
NN_dropout/: CMakeLists.txt  Test_example.m  Test_example2.m  Test_example_cv.m  matlabTesting.sh  nneval.m  nnff.m  nnpredict.m  nnsetup.m  nntrain.m  nnupdatefigures.m
NN_l2/: .nnsetup.m.swp  CMakeLists.txt  Test_example.m  Test_example2.m  Test_example_cv.m  filedescription.txt  matlabTesting.sh  matlabTesting1.sh  nnapplygrads.m  nnapplygrads.m~  nnsetup.m  nntest.m  nntrain.m  readtesterror.m  sigm.m
Stochastic_Approach/: .nnbp.m.swp  .nnupdatefigures.m.swp  CMakeLists.txt  Test_example.m  Test_example_cv.m  matlabTesting.sh  nnapplygrads.m  nnbp.m  nnbp_standard.m  nnff.m  nnsetup.m  nntrain.m
